--- a/gearshift/src/main/res/layout/torrent_queue_management_popup.xml
+++ b/gearshift/src/main/res/layout/torrent_queue_management_popup.xml
@@ -1,34 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:padding="8dp"
-    android:gravity="center"
-    android:orientation="horizontal">
+    android:padding="16dp"
+    android:orientation="vertical">
 
-    <ImageButton
-        style="@style/BorderlessButton"
-        android:id="@+id/queue_top"
-        android:src="@drawable/ic_arrow_drop_up_grey600_36dp"
-        android:contentDescription="@string/queue_top"/>
+    <TextView
+        style="@style/DialogLabel"
+        android:id="@+id/queue_label"
+        tools:text="Queue management label"/>
 
-    <ImageButton
-        style="@style/BorderlessButton"
-        android:id="@+id/queue_up"
-        android:src="@drawable/ic_expand_less_grey600_36dp"
-        android:contentDescription="@string/queue_up"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-    <ImageButton
-        style="@style/BorderlessButton"
-        android:id="@+id/queue_down"
-        android:src="@drawable/ic_expand_more_grey600_36dp"
-        android:contentDescription="@string/queue_down"/>
+        <ImageButton
+            style="@style/BorderlessButton"
+            android:id="@+id/queue_top"
+            android:src="@drawable/ic_arrow_drop_up_grey600_36dp"
+            android:contentDescription="@string/queue_top"/>
 
-    <ImageButton
-        style="@style/BorderlessButton"
-        android:id="@+id/queue_bottom"
-        android:src="@drawable/ic_arrow_drop_down_grey600_36dp"
-        android:contentDescription="@string/queue_bottom"/>
+        <ImageButton
+            style="@style/BorderlessButton"
+            android:id="@+id/queue_up"
+            android:src="@drawable/ic_expand_less_grey600_36dp"
+            android:contentDescription="@string/queue_up"/>
+
+        <ImageButton
+            style="@style/BorderlessButton"
+            android:id="@+id/queue_down"
+            android:src="@drawable/ic_expand_more_grey600_36dp"
+            android:contentDescription="@string/queue_down"/>
+
+        <ImageButton
+            style="@style/BorderlessButton"
+            android:id="@+id/queue_bottom"
+            android:src="@drawable/ic_arrow_drop_down_grey600_36dp"
+            android:contentDescription="@string/queue_bottom"/>
+
+    </LinearLayout>
 
 </LinearLayout>
